I had to scaffold professors database!

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "AmazonConnection": "Data Source=AmazonProjectDB.sqlite"
+    "AmazonConnection": "Data Source=Bookstore.sqlite"
   }
 }
